# django-highlights

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
config/: settings.py  urls.py
highlights/: admin.py  models.py
highlights/migrations/: 0001_initial.py  0002_rename_author_highlight_maker.py
highlights/static/css/: starter.css
highlights/static/js/: highlighter.js  textSelector.js
highlights/templates/: base.html
highlights/templates/base_template/: _meta.html
highlights/templates/highlights/: footer.html  highlightable_template.html  skeletal_frame.html
highlights/templatetags/: highlightable.py
highlights/tests/: conftest.py  test_highlights.py
sentinels/: admin.py  models.py  urls.py
sentinels/migrations/: 0001_initial.py
sentinels/templates/sentinels/: detail.html  frame.html
utils/: nb.ipynb
