[tool.poetry]
name = "django-highlights"
version = "0.0.1"
description = "Text selection and save as highlight."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
django-extensions = "^3.1.5"
django-debug-toolbar = "^3.2.2"

[tool.poetry.dev-dependencies]
djhtml = "^1.4.10"
pytest = "^6.2.5"
pytest-django = "^4.5.2"
pytest-instafail = "^0.4.2"
pytest-sugar = "^0.9.4"
pytest-icdiff = "^0.5"
pytest-cov = "^2.12.1"
mypy = "^0.902"
black = "^21.12b0"
isort = "^5.10.1"
pre-commit = "^2.16.0"
ipykernel = "^6.6.0"
tqdm = "^4.62"


[tool.pytest]
DJANGO_SETTINGS_MODULE = "config.settings" # depends on project root
minversion = "6.0"
addopts = "--ds=config.settings"
testpaths = ["tests"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = 'True'

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.1.12"]
build-backend = "poetry.core.masonry.api"
